outstanding (deprecated) EJB work